--- a/src/sidepanel/sidepanel.css
+++ b/src/sidepanel/sidepanel.css
@@ -1,17 +1,49 @@
-body {
-  width: 200px;
-  height: 300px;
+html {
+  height: 100%;
+  width: 100%;
   display: flex;
-  justify-content: center;
+  overflow: hidden;
+}
+
+body {
+  width: 100%;
+  height: 100%;
+  padding: 2px;
+  display: flex;
   background: white;
   color: black;
+  overflow: hidden;
+}
+
+.main {
+  width: 100%;
+  /* display: 'flex'; */
+}
+
+#element-picker-button {
+  position: relative;
+  overflow: hidden;
+  border-radius: 100%;
+  border: 2px solid black;
+  align-items: center;
   text-align: center;
+  align-self: start;
+  padding: 0;
+}
+
+button:hover {
+  background-color: blue;
+}
+
+img {
+  display: block;
+  margin: 0px;
+  object-fit: cover;
 }
 
 /* The switch - the box around the slider */
 .switch {
   position: relative;
-
   width: 60px;
   height: 34px;
   bottom: 10px;
