--- a/src/inject/content_script.css
+++ b/src/inject/content_script.css
@@ -1,6 +1,6 @@
 #styl-elementpicker {
-  background: transparent !important;
-  visibility: hidden !important;
+  background: slategray !important;
+  visibility: visible !important;
   cursor: not-allowed !important;
   position: fixed !important;
   top: 0 !important;
@@ -9,7 +9,7 @@
   margin: 0 !important;
   overflow: hidden !important;
   z-index: 2147483647 !important;
-  opacity: 1 !important;
+  opacity: .5 !important;
   color-scheme: light dark !important;
   pointer-events: none;
 }
