--- a/src/inject/elementpicker.css
+++ b/src/inject/elementpicker.css
@@ -1,12 +1,22 @@
 html {
-    height: 100% !important;
-    width: 100% !important;
+    height: 100%;
+    width: 100%;
 }
 body {
-    height: 100% !important;
-    width: 100% !important;
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    background-color: gray;
 }
-path {
+svg {
+    width: 100%;
+    height: 100%;
+    cursor: crosshair;
+}
+rect {
     fill: none;
-    stroke: red;
+    stroke: blue;
+    stroke-width: 1;
+    background-color: lightblue;
+
 }
